# when

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  quality-check.yml
tests/: conftest.py  test_cli.py  test_parsing.py  test_utils.py
when/: __main__.py  constants.py  main.py  utils.py
