[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "when"
version = "0.1.0"
description = ""
readme="README.md"
homepage="https://github.com/JoshKarpel/when"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"]
authors = ["JoshKarpel <josh.karpel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
humanize = ">=4.0.0"
pendulum = ">=2.1.2"
pytzdata = ">=2020.1"
rich = ">=12.0.0"
typer = ">=0.4.0"

[tool.poetry.dev-dependencies]
hypothesis = ">=6"
mypy = ">=0.931"
pre-commit = ">=2.17.0"
pytest = ">=7"
pytest-cov = ">=3"
pytest-mock = ">=3"
pytest-mypy = ">=0.8"
pytest-watch = ">=4"
pytest-xdist = ">=2"

[tool.poetry.scripts]
when = 'when.main:app'

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--mypy"]
testpaths = ["tests", "when"]

[tool.mypy]
show_error_codes = true

files = ["when", "tests"]

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true

warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true
